<resources>
    <string name="app_name">Cam4Quality</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password">Password</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="error_email">Enter valid email</string>
    <string name="error_password">Enter valid password</string>
    <string name="settings">Settings</string>
    <string name="factories">Factories</string>
    <string name="details">Details</string>
    <string name="users">Users</string>
    <string name="quality_params">Quality Params</string>
    <string name="quality_param_deviations">Quality Deviations</string>
    <string name="add_factory">Add Factory</string>
    <string name="factory_name">Factory Name</string>
    <string name="factory_type">Factory Type</string>
    <string name="factory_address">Factory Address</string>
    <string name="save">Save</string>
    <string name="error_adding_factory">Error adding factory!</string>
    <string name="no_factory">No Factory</string>
    <string name="hint_username">Username</string>
    <string name="add_user">Add User</string>
    <string name="error_loading_factories_data">Error loading factories data!</string>
    <string name="error_loading_quality_params">Error loading quality params</string>
    <string name="quality_param_info">Quality param value: %1$s \nParam normal value : %2$s \nParam max deviation: %3$s \nParam min deviation: %4$s \nFail percent: %5$s</string>
    <string name="quality_param_info_title">Quality Param Info</string>
    <string name="ok">Ok</string>
    <string name="add_quality_param">Add Param</string>
    <string name="hint_quality_param_name">Param Name</string>
    <string name="hint_quality_param_value">Param Value</string>
    <string name="max_param_deviation">Max Param Deviation:</string>
    <string name="normal_value">Normal Value</string>
    <string name="min_param_deviation">Min Param Deviation</string>
    <string name="statistics">Statistics</string>
    <string name="deleted_user">Deleted user %1$s</string>
    <string name="eng" translatable="false">ENG</string>
    <string name="ua" translatable="false">UKRAINIAN</string>
    <string name="date">Date:</string>
    <string name="detail_factory">Factory:</string>
    <string name="detail_is_critical">Is Critical:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="factories_statistics">Factories Statistics</string>
    <string name="most_dangerous">Most Dangerous</string>
    <string name="fail_daily">Fail Daily</string>
    <string name="factory_all_time">Factory All Time</string>
    <string name="time_interval">Time Interval</string>
    <string name="generate">Generate</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="all_details_count">All Details Count</string>
    <string name="failed_details">Failed Details</string>
    <string name="failed_details_percent">Failed Percent</string>
    <string name="add_quality_param_deviation">Add Deviation</string>
    <string name="hint_max_value_deviation">Max Deviation (%)</string>
    <string name="hint_min_value_deviation">Min Value Deviation (%)</string>
    <string name="hint_description">Description</string>
    <string name="logout">Logout</string>

</resources>
