<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_big">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_ua_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ua" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_eng_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eng" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout" />

</LinearLayout>