<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_quality_param_deviation_toolbar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close_white_24dp"
            app:title="@string/add_quality_param_deviation"
            app:titleTextColor="@color/textColorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:hint="@string/normal_value">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_deviation_normal_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:hint="@string/hint_max_value_deviation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_deviation_max_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:hint="@string/hint_min_value_deviation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_deviation_min_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:hint="@string/hint_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_deviation_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>