<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/factory_statistics_in_interval_toolbar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close_white_24dp"
            app:title="@string/statistics"
            app:titleTextColor="@color/textColorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/factory_statistics_in_interval_start"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:gravity="center_vertical"
        android:text="@string/start_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/factory_statistics_in_interval_end"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:gravity="center_vertical"
        android:text="@string/end_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/factory_statistics_in_interval_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:ms_text_color="@android:color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/factory_statistics_in_interval_generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_big"
        android:layout_marginTop="@dimen/padding_big"
        android:layout_marginEnd="@dimen/padding_big"
        android:text="@string/generate" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/factory_statistics_in_interval_all_details_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/all_details_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_factory_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/factory_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_all_details_count"
            app:layout_constraintTop_toBottomOf="@+id/factory_statistics_in_interval_all_details_count" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_failed_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/failed_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_factory_name"
            app:layout_constraintTop_toBottomOf="@+id/factory_statistics_in_interval_factory_name" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_failed_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/failed_details_percent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_failed_count"
            app:layout_constraintTop_toBottomOf="@+id/factory_statistics_in_interval_failed_count" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_all_details_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/factory_statistics_in_interval_all_details_count"
            app:layout_constraintStart_toEndOf="@+id/factory_statistics_in_interval_all_details_count"
            app:layout_constraintTop_toTopOf="@+id/factory_statistics_in_interval_all_details_count"
            tools:text="4" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_factory_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/factory_statistics_in_interval_factory_name"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_all_details_value"
            app:layout_constraintTop_toTopOf="@+id/factory_statistics_in_interval_factory_name"
            tools:text="Factory Name" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_failed_count_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/factory_statistics_in_interval_failed_count"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_factory_name_value"
            app:layout_constraintTop_toTopOf="@+id/factory_statistics_in_interval_failed_count"
            tools:text="15" />

        <TextView
            android:id="@+id/factory_statistics_in_interval_failed_percent_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/factory_statistics_in_interval_failed_percent"
            app:layout_constraintStart_toStartOf="@+id/factory_statistics_in_interval_failed_count_value"
            app:layout_constraintTop_toTopOf="@+id/factory_statistics_in_interval_failed_percent"
            tools:text="95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>