<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_quality_param_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_quality_param_toolbar"
            style="@style/Widget.Shrine.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_close_white_24dp"
            app:title="@string/add_quality_param"
            app:titleTextColor="@color/textColorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_quality_param_name_input_layout"
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_app_bar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quality_param_name"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_quality_param_value_input_layout"
        style="@style/Widget.Cam4Quality.TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_quality_param_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quality_param_value"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/add_quality_param_deviation_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_value_input_layout"
        app:ms_text_color="@android:color/black" />

    <TextView
        android:id="@+id/add_quality_param_max_deviation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/max_param_deviation"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/add_quality_param_normal_deviation_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_normal_deviation_text_view" />

    <TextView
        android:id="@+id/add_quality_param_normal_deviation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/normal_value"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/add_quality_param_deviation_spinner"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_deviation_spinner" />

    <TextView
        android:id="@+id/add_quality_param_min_deviation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"

        android:text="@string/min_param_deviation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/add_quality_param_max_deviation_text_view"
        app:layout_constraintTop_toBottomOf="@+id/add_quality_param_max_deviation_text_view" />

    <TextView
        android:id="@+id/add_quality_param_normal_deviation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/add_quality_param_normal_deviation_text_view"
        app:layout_constraintStart_toEndOf="@+id/add_quality_param_max_deviation_text_view"
        app:layout_constraintTop_toTopOf="@+id/add_quality_param_normal_deviation_text_view"
        tools:text="0.0" />

    <TextView
        android:id="@+id/add_quality_param_max_deviation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/add_quality_param_max_deviation_text_view"
        app:layout_constraintStart_toStartOf="@+id/add_quality_param_normal_deviation_value"
        app:layout_constraintTop_toTopOf="@+id/add_quality_param_max_deviation_text_view"
        tools:text="0.0" />

    <TextView
        android:id="@+id/add_quality_param_min_deviation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/add_quality_param_min_deviation_text_view"
        app:layout_constraintStart_toStartOf="@+id/add_quality_param_max_deviation_value"
        app:layout_constraintTop_toTopOf="@+id/add_quality_param_min_deviation_text_view"
        tools:text="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>